upd: auth features
