# backend/lib/backend_web/controllers/auth_json.ex
@@ -1,0 +1,8 @@
+defmodule BackendWeb.AuthJSON do
+  @doc """
+  Renders a jwt token object.
+  """
+  def token(%{token: token}) do
+    %{access_token: token}
+  end
+end
