# backend/priv/static/swagger.json
@@ -116,23 +116,45 @@
       },
       "title": "Update existing account",
       "type": "object"
+    },
+    "EmailAndPassport": {
+      "description": "An user account of the application",
+      "example": {
+        "email": "test@example.com",
+        "password": "qwerty123!"
+      },
+      "properties": {
+        "email": {
+          "description": "User email",
+          "type": "string"
+        },
+        "password": {
+          "description": "User password",
+          "type": "string"
+        }
+      },
+      "required": [
+        "password",
+        "email"
+      ],
+      "title": "Email and Password",
+      "type": "object"
+    },
+    "TokenResult": {
+      "description": "Object containing jwt token data",
+      "example": {
+        "access_token": "eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJFLUNhbXB1cyIsImV4cCI6MTcyMzYzNDA1OSwiaWF0IjoxNzIxMjE0ODU5LCJpc3MiOiJFLUNhbXB1cyIsImp0aSI6ImJlZTM0ODFiLTFmMTUtNDdiYi05YmIwLTQzYTk0MDhiYjgzYyIsIm5iZiI6MTcyMTIxNDg1OCwic3ViIjoiMTIiLCJ0eXAiOiJhY2Nlc3MifQ.o5kKkF_CJXsl0zrVoew38KCqqUMpPrn5qzJHcIuQQFYNZfCu0K2SerpHQTPlUqQOaHFzaWrzFFM497BtMSmb3Q"
+      },
+      "properties": {
+        "access_token": {
+          "description": "User access token",
+          "type": "string"
+        }
+      },
+      "title": "Token result",
+      "type": "object"
     }
   },
-  "tags": [
-    {
-      "name": "Accounts",
-      "description": "Operations with Accounts"
-    },
-    {
-      "name": "Groups",
-      "description": "Operations with Groups"
-    },
-    {
-      "name": "Speciality",
-      "description": "Operations with Specialities"
-    }
-  ],
-  "basePath": "/api",
   "paths": {
     "/accounts": {
       "get": {
@@ -295,7 +317,64 @@
           "Accounts"
         ]
       }
+    },
+    "/auth/signin": {
+      "post": {
+        "description": "Singin in the application using email and password",
+        "operationId": "BackendWeb.AuthController.sign_in",
+        "parameters": [
+          {
+            "description": "Data to sign in",
+            "in": "body",
+            "name": "account",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/EmailAndPassport"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/TokenResult"
+            }
+          },
+          "400": {
+            "description": "Bad request (Unknown error)"
+          },
+          "401": {
+            "description": "Unauthorized (wrong email or password)"
+          }
+        },
+        "summary": "Singin in the application",
+        "tags": [
+          "Auth"
+        ]
+      }
     }
   },
-  "swagger": "2.0"
+  "swagger": "2.0",
+  "basePath": "/api",
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Operations with authentication"
+    },
+    {
+      "name": "Accounts",
+      "description": "Operations with Accounts"
+    },
+    {
+      "name": "Groups",
+      "description": "Operations with Groups"
+    },
+    {
+      "name": "Speciality",
+      "description": "Operations with Specialities"
+    }
+  ]
 }
